--- a/src/conf/config.properties
+++ b/src/conf/config.properties
@@ -1,8 +1,8 @@
 ##JDBC Global Setting
 jdbc.driver=com.mysql.jdbc.Driver  
-jdbc.url=jdbc:mysql://localhost:3306/quick4j?useUnicode=true&characterEncoding=utf-8  
+jdbc.url=jdbc:mysql://192.168.19.150:3307/starfish4j?useUnicode=true&characterEncoding=utf-8  
 jdbc.username=root  
-jdbc.password=admin123  
+jdbc.password=root  
 
 ##DataSource Global Setting
 
