--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,9 +27,9 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath*:conf/springContext.xml
-            classpath*:conf/springContext-shiro.xml
         </param-value>
     </context-param>
+    <!--classpath*:conf/springContext-shiro.xml-->
 
     <!-- 配置Log4j监听器 -->
     <listener>
@@ -79,10 +79,11 @@
 
 
     <!-- shiro 安全过滤器 -->
+    <!--
     <filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        <!-- <async-supported>true</async-supported>-->
+        <async-supported>true</async-supported>
         <init-param>
             <param-name>targetFilterLifecycle</param-name>
             <param-value>true</param-value>
@@ -92,7 +93,7 @@
         <filter-name>shiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+    -->
 
     <!-- 首页 -->
     <welcome-file-list>
