--- a/src/conf/config.properties
+++ b/src/conf/config.properties
@@ -1,6 +1,6 @@
 ##JDBC Global Setting
 jdbc.driver=com.mysql.jdbc.Driver  
-jdbc.url=jdbc:mysql://192.168.19.150:3307/starfish4j?useUnicode=true&characterEncoding=utf-8  
+jdbc.url=jdbc:mysql://192.168.19.150:3307/starfish4j?useUnicode=true
 jdbc.username=root  
 jdbc.password=root  
 
