--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -74,7 +74,7 @@
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <!-- 拦截所有/rest/* 的请求,交给DispatcherServlet处理,性能最好 -->
-        <url-pattern>/rest/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 
@@ -97,21 +97,21 @@
 
     <!-- 首页 -->
     <welcome-file-list>
-        <welcome-file>rest/index</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
     <!-- 错误页 -->
     <error-page>
         <error-code>404</error-code>
-        <location>/rest/page/404</location>
+        <location>/err/404.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/rest/page/500</location>
+        <location>/err/500.jsp</location>
     </error-page>
     <error-page>
         <exception-type>org.apache.shiro.authz.AuthorizationException</exception-type>
-        <location>/rest/page/401</location>
+        <location>/err/401.jsp</location>
     </error-page>
 
 </web-app>
